tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__assignment__grouping.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/grouping.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
InvalidAssignmentTarget(Grouping { l_paren: Token { kind: LParen, loc: craftinginterpreters/test/assignment/grouping.lox:13..14 }, expr: Ident(Name(Token { kind: Identifier, loc: craftinginterpreters/test/assignment/grouping.lox:14..15 })), r_paren: Token { kind: RParen, loc: craftinginterpreters/test/assignment/grouping.lox:15..16 } })
