tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__assignment__local.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/local.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
UnexpectedToken { expected: [LParen, String, Number, True, False, Nil, Minus, Bang], actual: Token { kind: LBrace, loc: craftinginterpreters/test/assignment/local.lox:0..1 } }
