tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__assignment__syntax.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/syntax.lox
---
success: true
exit_code: 0
----- stdout -----
var
var

----- stderr -----
