tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__assignment__to_this.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/to_this.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
UnexpectedToken { expected: [LParen, String, Number, True, False, Nil, Minus, Bang], actual: Token { kind: Class, loc: craftinginterpreters/test/assignment/to_this.lox:0..5 } }
